# msc-thesis

./: .gitignore  README.md
code/: .gitignore  LeftGrabber 320x240 60fps.bat  LeftGrabber 640x480 15fps.bat  LeftGrabber 640x480 30fps.bat  LeftGrabber.bat  README.txt  RightGrabber.bat  arm_RPC.bat  arm_server.bat  balta_arm.ini  balta_hand.ini  hand_RPC.bat  hand_server.bat  head_RPC.bat  head_server.bat  terminate.bat
code/baltaKin/: ALL_BUILD.vcproj  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcproj  baltaKin.sln  baltaKin.vcproj  baltaKinConfig.cmake  cmake_install.cmake
code/baltaKin/include/iCub/: iKinFwd.h  iKinInv.h  iKinIpOpt.h
code/baltaKin/src/: iKinFwd.cpp  iKinInv.cpp  iKinIpOpt.cpp
code/baltaKinArmCtrl/: ALL_BUILD.vcproj  CMakeCache.txt  CMakeLists.txt  INSTALL.vcproj  ZERO_CHECK.vcproj  baltaKinArmCtrl.cpp  baltaKinArmCtrl.h  baltaKinArmCtrl.sln  baltaKinArmCtrl.vcproj  cmake_install.cmake  main.cpp
code/camshift/: ALL_BUILD.vcproj  CMakeCache.txt  CMakeLists.txt  YarpTimer.cpp  YarpTimer.h  ZERO_CHECK.vcproj.cmake  camshift.cpp  camshift.h  camshift.sln  camshift.vcproj.cmake  cmake_install.cmake
code/graspingWithPF/: 081214-graspingWithPF-scripts.zip.rename  ALL_BUILD.vcproj  ArmActuator.cpp  CMakeCache.txt  CMakeLists.txt  HandActuator.cpp  HandActuator.h  Hand_kin.cpp  ZERO_CHECK.vcproj  cmake_install.cmake  grasp.cpp  graspingWithPF.cpp  graspingWithPF.h  graspingWithPF.sln  graspingWithPF.vcproj  kinpronator.cpp  main.cpp
code/reaching/: ALL_BUILD.vcproj  ArmActuator.cpp  ArmActuator.h  CMakeCache.txt  (+14 more)
improved_version_after_090309/: abstracts.tex  acknowledgements.tex  acronyms.tex  biblio.bib  bibliographies.sh  conclusions.tex  experimental_results.tex  frontispiece.sh  index.sh  intro.tex  proposed_architecture.tex  related_work.tex  robot_platform.tex  saponaro_msc_thesis-frn.tex  saponaro_msc_thesis.tex  webo.bib
(+27 files in other folders)
