SET(PROJECTNAME baltaKinArmCtrl)

PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

#FIND_PACKAGE(IKIN REQUIRED)
#LINK_LIBRARIES(${IKIN_LIBRARIES})
#INCLUDE_DIRECTORIES(${IKIN_INCLUDE_DIRS})

FIND_PACKAGE(BALTAKIN REQUIRED)
LINK_LIBRARIES(${BALTAKIN_LIBRARIES})
INCLUDE_DIRECTORIES(${BALTAKIN_INCLUDE_DIRS})

IF(NOT IPOPT_FOUND)
   MESSAGE(FATAL_ERROR "IPOPT is strictly required!")
ENDIF(NOT IPOPT_FOUND)

# Search for source code.
FILE(GLOB folder_source *.cpp *.cc *.c)
FILE(GLOB folder_header *.h)
SOURCE_GROUP("Source Files" FILES ${folder_source})
SOURCE_GROUP("Header Files" FILES ${folder_header})


ADD_EXECUTABLE(${PROJECTNAME} ${folder_source})
#INSTALL(TARGETS ${PROJECTNAME} DESTINATION ${ICUB_DIR}/bin)




